Corrected the position of the website banner's icon and name, aligning them in the center. In the mobile version, the icon is placed in the right position.

--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ header {
 
 .username {
     margin: 0 auto;
-    padding-right: 30px;
     font-weight: bold;
     font-size: 24px;
     position: absolute;
@@ -60,7 +59,7 @@ header {
     transform: translate(-50%, -50%);
     width: 50px; /* adjust as needed */
     height: 50px; /* adjust as needed */
-    padding-right: 210px; /* adjust as needed */
+    padding-right: 180px; /* adjust as needed */
 }
 
 /* Navigation Menu Decoration */
@@ -314,7 +313,10 @@ footer {
     }
 
     .spiderWebFlat {
-        padding: 0 175px 2px 0;
+        position: absolute;
+        right: 0;
+        left: 90%;
+        padding-right: 0;
         z-index: 1004;
     }
 
